# sk-async-generator-sample

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: CI-skip.yml  CI.yml
app/: main.py
llm_lib/: plugin.py  service.py
