[tool.poetry]
name = "sk_async_generator_sample"
version = "0.1.0"
description = "Semantic Kernel v0.5.0 でAsync Generator を使いたいサンプルコード"
authors = [
    "Yuna Tomida <ytomida.mmm@gmail.com>"
]
packages = [
    { include = "llm_lib", from = "." }
]

[tool.poetry.dependencies]
python = "~3.11"
semantic-kernel = "=0.5.1.dev0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.2"
ipython = "^8.22.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = []
plugins = []
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
ignore = "D203,W605,E501,W503,E203,C901"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env"
max-complexity = 10
max-line-length = 79
